feature: 网关支持灰度consul配置 issue #1424

--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -54,6 +54,10 @@ BKCI_CONSUL_PORT=8500
 BKCI_CONSUL_TAG=ci
 BKCI_CONSUL_DOMAIN=ci
 BKCI_CONSUL_DNS_PORT=8600
+BKCI_CONSUL_GRAY_IP=127.0.0.1
+BKCI_CONSUL_DEVNET_GRAY_IP=127.0.0.1
+BKCI_CONSUL_IP=127.0.0.1
+BKCI_CONSUL_DEVNET_IP=127.0.0.1
 # influxDB 配置， 用于构建机详情上报
 INFLUXDB_SERVER=influxDB服务器地址
 INFLUXDB_USERNAME=influxDB用户名
