--- a/src/backend/ci/core/openapi/boot-openapi/src/main/resources/application.yml
+++ b/src/backend/ci/core/openapi/boot-openapi/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: openapi{service-suffix}
+    name: openapi${service-suffix}
     desc: DevOps openapi Service
     version: 4.0
     packageName: com.tencent.devops.openapi
