feature:网关的流水线心跳反馈增加错误码 issue #1471

--- a/support-files/templates/gateway#core#devops.server.conf
+++ b/support-files/templates/gateway#core#devops.server.conf
@@ -28,6 +28,9 @@ server {
 
   # 后台的网关路径
   include backend.conf;
+
+  # 后台特殊路径
+  include vhosts/devops.backend.special.conf;
   
   # 前端页面
   include frontend.conf;
