chore: application-process.yml配置模板文件增加引擎相关配置 #1515

--- a/scripts/bkenv.properties
+++ b/scripts/bkenv.properties
@@ -71,7 +71,8 @@ DOCKER_REGISTRY_PASSWORD=dockerhub帐号密码
 # docker dispatch 配置镜像下载前缀
 DOCKER_IMAGE_PREFIX=dockerhub镜像下载地址
 DOCKER_PORT=8090
-
+# process 引擎事件处理并发数量
+PROCESS_EVENT_CONCURRENT=10
 
 
 # ------------------对接蓝鲸社区版必填------------------
