--- a/src/backend/ci/core/websocket/api-websocket/build.gradle
+++ b/src/backend/ci/core/websocket/api-websocket/build.gradle
@@ -1,4 +1,3 @@
-
 /*
  * Tencent is pleased to support the open source community by making BK-CI 蓝鲸持续集成平台 available.
  *
@@ -26,14 +25,7 @@
  */
 
 dependencies {
-    compile project(":core:common:common-client")
-    compile project(":core:common:common-websocket")
-    compile project(":core:common:common-redis")
-    compile project(":core:project:api-project")
-    compile project(":core:websocket:api-websocket")
-    compile "org.springframework.boot:spring-boot-starter-websocket"
-    compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
-    compile "io.undertow:undertow-servlet"
-    compile "io.undertow:undertow-websockets-jsr"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile project(":core:common:common-api")
 }
+
+apply from: "$rootDir/task_deploy_to_maven.gradle"
