perf: agent编译依赖改造为go mod #1106

--- a/src/agent/Makefile
+++ b/src/agent/Makefile
@@ -1,14 +1,19 @@
 BINDIR := $(CURDIR)/bin
 CMDDIR := $(CURDIR)/src/cmd
 
-all: build
-build:
+all: build_linux
+build_linux:
 	mkdir -p $(BINDIR)
-	GO111MODULE=on go build -o $(BINDIR)/devopsDaemon $(CMDDIR)/daemon
-	GO111MODULE=on go build -o $(BINDIR)/devopsAgent $(CMDDIR)/agent
-	GO111MODULE=on go build -o $(BINDIR)/upgrader $(CMDDIR)/upgrader
+	GO111MODULE=on go build -o $(BINDIR)/devopsDaemon_linux $(CMDDIR)/daemon
+	GO111MODULE=on go build -o $(BINDIR)/devopsAgent_linux $(CMDDIR)/agent
+	GO111MODULE=on go build -o $(BINDIR)/upgrader_linux $(CMDDIR)/upgrader
+	ls -la $(BINDIR)
+build_macos:
+	mkdir -p $(BINDIR)
+	GO111MODULE=on go build -o $(BINDIR)/devopsDaemon_macos $(CMDDIR)/daemon
+	GO111MODULE=on go build -o $(BINDIR)/devopsAgent_macos $(CMDDIR)/agent
+	GO111MODULE=on go build -o $(BINDIR)/upgrader_macos $(CMDDIR)/upgrader
+	ls -la $(BINDIR)
 clean:
 	mkdir -p $(BINDIR)
-	rm -f $(BINDIR)/devopsDaemon
-	rm -f $(BINDIR)/devopsAgent
-	rm -f $(BINDIR)/upgrader
+	rm -f $(BINDIR)/*
