--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -23,10 +23,10 @@ jobs:
         with:
           go-version: 1.12
       - uses: actions/checkout@v2
-      - run: make clean build
+      - run: make clean build_linux
         working-directory: src/agent/
         if: matrix.os == 'ubuntu-latest'
-      - run: make clean build
+      - run: make clean build_macos
         working-directory: src/agent/
         if: matrix.os == 'macos-latest'
       - run: build_windows.bat
