perf: agent编译依赖改造为go mod #1106

--- a/src/agent/Makefile
+++ b/src/agent/Makefile
@@ -4,12 +4,14 @@ CMDDIR := $(CURDIR)/src/cmd
 all: build_linux
 build_linux:
 	mkdir -p $(BINDIR)
+	go env
 	GO111MODULE=on go build -o $(BINDIR)/devopsDaemon_linux $(CMDDIR)/daemon
 	GO111MODULE=on go build -o $(BINDIR)/devopsAgent_linux $(CMDDIR)/agent
 	GO111MODULE=on go build -o $(BINDIR)/upgrader_linux $(CMDDIR)/upgrader
 	ls -la $(BINDIR)
 build_macos:
 	mkdir -p $(BINDIR)
+	go env
 	GO111MODULE=on go build -o $(BINDIR)/devopsDaemon_macos $(CMDDIR)/daemon
 	GO111MODULE=on go build -o $(BINDIR)/devopsAgent_macos $(CMDDIR)/agent
 	GO111MODULE=on go build -o $(BINDIR)/upgrader_macos $(CMDDIR)/upgrader
