--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -25,6 +25,7 @@
     "portal-vue": "^1.5.1",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
+    "uuid": "^8.1.0",
     "vee-validate": "^2.0.3",
     "vue": "^2.6.10",
     "vue-echarts": "^3.0.9",
