--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -33,6 +33,7 @@
     "vue-router": "^2.8.1",
     "vuedraggable": "^2.16.0",
     "vuex": "^2.4.0",
+    "vue-i18n": "^8.18.1",
     "xterm": "^3.1.0"
   },
   "devDependencies": {
