--- a/src/backend/ci/build.gradle
+++ b/src/backend/ci/build.gradle
@@ -113,13 +113,20 @@ ext {
 
 allprojects {
     group "com.tencent.bk.devops.ci"
-    version "2.3"
+    version "2.3.6"
     // 修改为通过JVM启动构建时系统变量，或者从gradle.properties配置文件中读取
     // 1. try read ci_version in jvm -Dci_version
     def devops_version = System.getProperty("ci_version")
     // 2. try read [CI_VERSION_IN_GRADLE_PROPERTIES] in gradle.properties
     if (devops_version != null) {
         version = devops_version
+    }
+
+    def snapshot = System.getProperty("snapshot")
+    if (snapshot == "true") {
+        version = version + "-SNAPSHOT"
+    } else {
+        version = version + "-RELEASE"
     }
 
     def mavenRepoUrl = System.getProperty("mavenRepoUrl")
