chore: 发布Maven包 #1759 打包时不上传，有可能会导致packages不够用

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -47,4 +47,4 @@ jobs:
       with:
         gradle-version: 4.8.1
         build-root-directory: src/backend/ci
-        arguments: test clean :boot-assembly:classes -DmavenRepoUrl="http://maven.aliyun.com/nexus/content/groups/public/" uploadArchives -DmavenRepoUsername=${{ github.actor }} -DmavenRepoPassword=${{ secrets.GITHUB_TOKEN }} -Dsnapshot=true
+        arguments: test clean :boot-assembly:classes -DmavenRepoUrl="http://maven.aliyun.com/nexus/content/groups/public/"
