chore: 发布Maven包 #1759 打包时不上传，有可能会导致packages不够用

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           gradle-version: 4.8.1
           build-root-directory: src/backend/ci/core
-          arguments: clean test build uploadArchives -DmavenRepoUrl="http://maven.aliyun.com/nexus/content/groups/public/"
+          arguments: clean test build -DmavenRepoUrl="http://maven.aliyun.com/nexus/content/groups/public/"
       
       - name: Create artifact - Step1:init
         run: |
