featuer: 微服务接口增加jwt验证 issue #1795

--- a/src/backend/ci/core/common/common-web/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/backend/ci/core/common/common-web/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -5,6 +5,11 @@
       "sourceType": "com.tencent.devops.common.web.SwaggerProperties",
       "name": "spring.application",
       "type": "com.tencent.devops.common.web.SwaggerProperties"
+    },
+    {
+      "sourceType": "com.tencent.devops.common.web.security.ServiceSecurityProperties",
+      "name": "spring.application",
+      "type": "com.tencent.devops.common.web.SwaggerProperties"
     }
   ],
   "properties": [
