--- a/support-files/templates/gateway#core#devops.server.conf
+++ b/support-files/templates/gateway#core#devops.server.conf
@@ -12,7 +12,7 @@ server {
 #  ### ssl config end ###
 
   access_log __INSTALL_PATH__/logs/ci/nginx/devops.access.$log_date.log devops_format;
-  error_log __INSTALL_PATH__/logs/ci/nginx/devops.error.log;
+  error_log __INSTALL_PATH__/logs/ci/nginx/devops.error.log warn;
 
   # set域名区域
   set $devops_region "__BKCI_REGION__";
