--- a/src/gateway/core/set.conf
+++ b/src/gateway/core/set.conf
@@ -5,7 +5,7 @@
   set_by_lua_file $realip 'conf/lua/set_real_ip.lua';
 
   # 设置蓝盾的JWT-TOKEN
-  set_by_lua_file $realip 'conf/lua/set_jwt_token.lua';
+  set_by_lua_file $jwt_token 'conf/lua/set_jwt_token.lua';
 
   # 设置request的region
   set_by_lua_file $request_region 'conf/lua/set_region.lua';
