--- a/src/backend/ci/core/common/common-util/build.gradle
+++ b/src/backend/ci/core/common/common-util/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     compile 'org.apache.commons:commons-lang3'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation "org.junit.jupiter:junit-jupiter"
+//    testImplementation "org.junit.jupiter:junit-jupiter"
 }
