feature:定期清理流水线构建历史记录 #1848

--- a/src/backend/ci/settings.gradle
+++ b/src/backend/ci/settings.gradle
@@ -74,6 +74,7 @@ include ":core:log:model-log"
 include ":core:misc"
 include ":core:misc:api-misc"
 include ":core:misc:biz-misc"
+include ":core:misc:biz-misc-sample"
 include ":core:misc:boot-misc"
 include ":core:quality"
 include ":core:quality:api-quality"
